finished minimising java
