# src/main/resources/openapi.json
@@ -285,6 +285,34 @@
         } ]
       }
     },
+    "/v1/specimengraphinfo" : {
+      "get" : {
+        "operationId" : "getSpecimenData",
+        "responses" : {
+          "200" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/GraphData"
+                }
+              }
+            }
+          },
+          "400-599" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/DaSSCoError"
+                }
+              }
+            }
+          }
+        },
+        "security" : [ {
+          "dassco-idp" : [ ]
+        } ]
+      }
+    },
     "/v1/institutes" : {
       "get" : {
         "operationId" : "getInstitutes_2",
@@ -472,34 +500,6 @@
               "application/json" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/Pipeline"
-                }
-              }
-            }
-          },
-          "400-599" : {
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/DaSSCoError"
-                }
-              }
-            }
-          }
-        },
-        "security" : [ {
-          "dassco-idp" : [ ]
-        } ]
-      }
-    },
-    "/v1/specimengraphinfo" : {
-      "get" : {
-        "operationId" : "getSpecimenData",
-        "responses" : {
-          "200" : {
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/SpecimenData"
                 }
               }
             }
@@ -1112,6 +1112,27 @@
           }
         }
       },
+      "GraphData" : {
+        "type" : "object",
+        "properties" : {
+          "instituteName" : {
+            "type" : "string"
+          },
+          "pipelineName" : {
+            "type" : "string"
+          },
+          "workstationName" : {
+            "type" : "string"
+          },
+          "createdDate" : {
+            "type" : "string"
+          },
+          "specimens" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }
+      },
       "Institute" : {
         "type" : "object",
         "properties" : {
@@ -1165,53 +1186,6 @@
             "type" : "string",
             "description" : "The institution that the pipeline belongs to",
             "example" : "NNAD"
-          }
-        }
-      },
-      "SpecimenData" : {
-        "type" : "object",
-        "properties" : {
-          "instituteName" : {
-            "type" : "string"
-          },
-          "instituteOcrText" : {
-            "type" : "string"
-          },
-          "specimenName" : {
-            "type" : "string"
-          },
-          "specimenMediaSubject" : {
-            "type" : "string"
-          },
-          "specimenSpecifySpecId" : {
-            "type" : "string"
-          },
-          "specimenSpecifyAttId" : {
-            "type" : "string"
-          },
-          "specimenOrigSpecifyMediaName" : {
-            "type" : "string"
-          },
-          "assetName" : {
-            "type" : "string"
-          },
-          "assetMediaGuid" : {
-            "type" : "string"
-          },
-          "assetFileFormat" : {
-            "type" : "string"
-          },
-          "assetDateMediaCreated" : {
-            "type" : "string"
-          },
-          "pipelineName" : {
-            "type" : "string"
-          },
-          "workstationName" : {
-            "type" : "string"
-          },
-          "createdDate" : {
-            "type" : "string"
           }
         }
       },
